Add example pages

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -8,13 +8,17 @@
 
     <link rel="stylesheet" href="/assets/scss/main.scss" />
 
-    <title>Vite + HTML + SASS + TS Starter Template</title>
+    <title>Home</title>
   </head>
 
   <body>
-    <h1>
-      Vite + HTML + SASS + TS Starter Template Example
-    </h1>
+    <div id="app">
+      <include src="/src/layouts/partials/header.html"></include>
+
+      <h1>
+        Home Page
+      </h1>
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
