--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,13 +12,12 @@
   </head>
 
   <body>
-    <div id="app">
-      <include src="/src/layouts/partials/header.html"></include>
-
+    <a href="/">
       <h1>
-        Home Page
+        Vite + HTML + SASS + TS Starter Template Example
       </h1>
-    </div>
+    </a>
+
 
     <script type="module" src="/src/main.ts"></script>
   </body>
