--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
   </head>
 
   <body>
-    <h1>
-      Vite + HTML + SASS + TS Starter Template Example
-    </h1>
+    <a href="/">
+      <h1>
+        Vite + HTML + SASS + TS Starter Template Example
+      </h1>
+    </a>
+
+    <a href="/src/pages/home.html">
+      <h1>
+        Home
+      </h1>
+    </a>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
